# se3-lio

./: .gitignore  .mailmap  README.md
.github/workflows/: pypi.yml
config/: grandtour.yaml  ntu.yaml  oxspires.yaml  tartandrive.yaml
cpp/se3_lio/: CMakeLists.txt  README.md
cpp/se3_lio/common/: data_type.h  utils.h
cpp/se3_lio/core/: CMakeLists.txt  lie.cpp  lie.h  map_management.cpp  map_management.h  state_predict.cpp  state_predict.h  state_update.cpp  state_update.h
cpp/se3_lio/core/temporary/: voxel_map_util.cpp  voxel_map_util.h
cpp/se3_lio/pipeline/: CMakeLists.txt  SE3_LIO.cpp  SE3_LIO.h
cpp/se3_lio/synchronizer/: CMakeLists.txt  measurement_synchronizer.cpp  measurement_synchronizer.h
docker/python/: Dockerfile  build_docker.sh  run_docker.sh
docker/ros1/: Dockerfile  build_docker.sh  run_docker.sh  run_docker_local.sh
docker/ros2/: Dockerfile  build_docker.sh  run_docker.sh  run_docker_local.sh
pipelines/: CMakeLists.txt  package.xml
pipelines/ros1/: CMakeLists.txt  package.xml
pipelines/ros1/config/: ncd.yaml  ntu.yaml  params.yaml
pipelines/ros1/launch/: run.launch  run_se3lio_ncd.launch  run_se3lio_ntu.launch
pipelines/ros1/rviz/: rviz.rviz
pipelines/ros1/src/: lio_node.cpp  lio_node.h  ros1_conversion.h
pipelines/ros2/: CMakeLists.txt  package.xml
pipelines/ros2/config/: params.yaml
pipelines/ros2/launch/: run.launch.py
pipelines/ros2/src/: lio_node.cpp  lio_node.h  ros2_conversion.h
python/: CMakeLists.txt  README.md  pyproject.toml
python/benchmark/: README.md  __init__.py  adaptive.sh  evaluate.py  run.py  score.py  watchdog.py
python/benchmark/datasets/: grandtour.yaml  ncd.yaml  ntu.yaml  oxspires.yaml  tartandrive.yaml
python/benchmark/sweeps/: basic.yaml  tartan.yaml  verify.yaml
python/se3_lio/: __init__.py  config.py  online_sync.py  pipeline.py  se3_lio.py
python/se3_lio/benchmark/: __init__.py  evaluate.py  publish.py  registry.py  run.py  search.py
python/se3_lio/benchmark/examples/: datasets.yaml
python/se3_lio/benchmark/examples/sweeps/: ntu.yaml  ntu_suite.yaml
python/se3_lio/datasets/: __init__.py  ros1bag.py  rosbag.py
python/se3_lio/pybind/: CMakeLists.txt  se3_lio_pybind.cpp
python/se3_lio/tools/: cmd.py
python/se3_lio/viz/: __init__.py  _geometry.py  polyscope_viz.py  rerun_logger.py
python/tests/: _bench_import.py  test_benchmark_evaluate.py  test_benchmark_search.py  test_polyscope_viz.py  test_rerun_viz.py  test_smoke.py
python/verify/: README.md  ate.py  bag_reader.py  check_rerun.py  record_node_odom.py  run_offline.py  run_verification.sh  tum.py
ros/: package.xml
ros/ros1/: CMakeLists.txt  package.xml
ros/ros1/config/: ncd.yaml  oxspires.yaml
ros/ros1/launch/: run_py.launch  run_se3lio_grandtour.launch  run_se3lio_ncd.launch  run_se3lio_ntu.launch  run_se3lio_oxspires.launch  run_se3lio_tartandrive.launch
ros/ros1/scripts/: se3_lio_node.py
ros/ros1/src/: lio_node.h  ros1_conversion.h
ros/ros2/: CMakeLists.txt  package.xml
ros/ros2/config/: params.yaml
ros/ros2/launch/: run_py.launch.py
ros/ros2/rviz/: rviz.rviz
ros/ros2/scripts/: se3_lio_node.py
ros/ros2/src/: lio_node.h
