<?xml version="1.0"?>
<package format="3">
    <name>se3_lio</name>
    <version>0.1.0</version>

    <description>Smooth IMU Propagation With Jointly Distributed Poses on SE(3) Manifold for Accurate and Robust LiDAR-Inertial Odometry</description>

    <maintainer email="gunhee_shin@kaist.ac.kr">Gunhee Shin</maintainer>
    <author email="gunhee_shin@kaist.ac.kr">Gunhee Shin</author>

    <license>GPL-2.0</license>

    <!-- Dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>

</package>
