cmake_minimum_required(VERSION 3.16...3.26)
project(se3_lio_cpp VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_BUILD_TYPE Release)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

find_package(PCL REQUIRED)
find_package(OpenMP QUIET REQUIRED)

if (OPENMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif ()

option(USE_CCACHE "Build using Ccache if found on the path" ON)
option(USE_SYSTEM_EIGEN3 "Use system pre-installed Eigen" ON)
option(USE_SYSTEM_SOPHUS "Use system pre-installed Sophus" ON)
include(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/find_dependencies.cmake)

# Setup build options

add_subdirectory(synchronizer)
add_subdirectory(pipeline)
add_subdirectory(core)

install(TARGETS synchronizer DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/se3_lio)
install(TARGETS pipeline DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/se3_lio)
install(TARGETS core DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/se3_lio)


install(TARGETS synchronizer pipeline core
    EXPORT se3_lioTargets
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/se3_lio
    INCLUDES DESTINATION ${CMAKE_INSTALL_PREFIX}/include/se3_lio
)

install(DIRECTORY
    ${CMAKE_CURRENT_SOURCE_DIR}/common
    ${CMAKE_CURRENT_SOURCE_DIR}/core
    ${CMAKE_CURRENT_SOURCE_DIR}/pipeline
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronizer
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/se3_lio
    FILES_MATCHING PATTERN "*.h"
)