<?xml version="1.0"?>
<package format="3">
    <name>se3_lio</name>
    <version>0.1.0</version>

    <description>Smooth IMU Propagation With Jointly Distributed Poses on SE(3) Manifold for Accurate and Robust LiDAR-Inertial Odometry</description>

    <maintainer email="gunhee_shin@kaist.ac.kr">Gunhee Shin</maintainer>
    <author email="gunhee_shin@kaist.ac.kr">Gunhee Shin</author>

    <license>MIT</license>

    <!-- Dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>

    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>

</package>
