<?xml version="1.0"?>
<package format="3">
    <name>se3_lio</name>
    <version>0.1.0</version>

    <description>Smooth IMU Propagation With Jointly Distributed Poses on SE(3) Manifold for Accurate and Robust LiDAR-Inertial Odometry</description>

    <maintainer email="gunhee_shin@kaist.ac.kr">Gunhee Shin</maintainer>
    <author email="gunhee_shin@kaist.ac.kr">Gunhee Shin</author>

    <license>GPL-2.0</license>

    <!-- Dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>livox_ros_driver2</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
